fix(chat): White square when both scrolls are visible.

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -74,6 +74,10 @@
     a:active {
         color: black;
     }
+
+    &::-webkit-scrollbar-corner {
+        background: #3a3a3a;
+    }
 }
 
 
